<resources>
    <string name="app_name">VocabPower</string>
    <string name="title_activity_vocab_list">Vocabs</string>
    <string name="title_word">Word:</string>
    <string name="title_meaning">Meaning:</string>
    <string name="title_example">Example:</string>
    <string name="title_word_type">Word Type:</string>

    <string name="action_button_done">Done</string>
    <string name="action_button_delete">Delete</string>
    <string name="action_button_edit">Edit</string>
    <string name="action_button_favourite">Favourite</string>
    <string name="hint_search">Search Vocab</string>

    <string name="txt_no_word_available">No Word Available.</string>



</resources>
